Actualizacion card para dispositivos

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -177,11 +177,14 @@ The above copyright notice and this permission notice shall be included in all c
                                 <h6 class="card-category text-gray">00:02:02:4f:9b:af</h6>
                                 <h4 class="card-title">10.30.0.15</h4>
                                 <p class="card-description">SISTEMAS</p>
-                                <div class="stats">
-                                    <i class="material-icons">access_time</i> 2021-04-05 05:27:15
-                                </div>
-                                <div class="stats">
-                                    <i class="material-icons">calendar</i> 2021-04-05
+
+                                <div class="card-footer">
+                                    <div class="stats">
+                                        <i class="material-icons">access_time</i> 2021-04-05 05:27:15
+                                    </div>
+                                    <div class="stats">
+                                        <i class="material-icons">calendar</i> 2021-04-05
+                                    </div>
                                 </div>
                                 <a href="javascript:;" class="btn btn-primary btn-round">Reboot</a>
                             </div>
