--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -166,26 +166,26 @@ The above copyright notice and this permission notice shall be included in all c
                         </div>
                     </div>
 
-                    <div className="col-md-4">
-                        <div className="card card-profile">
-                            <div className="card-avatar">
+                    <div class="col-md-4">
+                        <div class="card card-profile">
+                            <div class="card-avatar">
                                 <a href="javascript:;">
-                                    <img className="img" id="DeviceImage" src="../assets/img/blank.png"/>
+                                    <img class="img" id="DeviceImage" src="../assets/img/blank.png"/>
                                 </a>
                             </div>
-                            <div className="card-body">
-                                <h6 className="card-category text-gray" id="DeviceMacAddress"></h6>
-                                <h4 className="card-title" id="DeviceIp"></h4>
-                                <p className="card-description" id="DeviceCode"></p>
-                                <p className="card-description" id="DeviceFirmware"></p>
+                            <div class="card-body">
+                                <h6 class="card-category text-gray" id="DeviceMacAddress"></h6>
+                                <h4 class="card-title" id="DeviceIp"></h4>
+                                <p class="card-description" id="DeviceCode"></p>
+                                <p class="card-description" id="DeviceFirmware"></p>
 
-                                <div className="card-footer">Ultima actualización
-                                    <div className="stats" id="DeviceLastUptade"></div>
+                                <div class="card-footer">Ultima actualización
+                                    <div class="stats" id="DeviceLastUptade"></div>
                                 </div>
-                                <div className="card-footer">Fecha activación
-                                    <div className="stats" id="DeviceRegisterDate"></div>
+                                <div class="card-footer">Fecha activación
+                                    <div class="stats" id="DeviceRegisterDate"></div>
                                 </div>
-                                <a href="javascript:;" className="btn btn-primary btn-round">Reboot</a>
+                                <a href="javascript:;" class="btn btn-primary btn-round">Reboot</a>
                             </div>
                         </div>
                     </div>
