Cambio en la creacion de la tabla 2

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -562,6 +562,7 @@ The above copyright notice and this permission notice shall be included in all c
 
     GetDevicesByStatus();
     LoadDeviceList();
+    SetTable();
 
     setInterval(ReloadData, 100000);
 
