Cambio en la creacion de la tabla 3

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -532,6 +532,11 @@ The above copyright notice and this permission notice shall be included in all c
     function ReloadData(){
         GetDevicesByStatus();
         LoadDeviceList();
+
+        $('#DevicesList').DataTable( {
+            ajax: DevicesList
+        } );
+
         DevicesTable.ajax.reload( null, false );
     }
 
