--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -582,8 +582,7 @@ The above copyright notice and this permission notice shall be included in all c
             async: false,
             url: SourceControllers + 'DevicesStatus.php',
             success: function (response) {
-                var Response = $.parseJSON(response);
-                console.log(Response);
+                //var Response = $.parseJSON(response);
             }
         });
     }
