--- a/Views/Layouts/Contents/Templates/dashboard.html
+++ b/Views/Layouts/Contents/Templates/dashboard.html
@@ -42,13 +42,13 @@ The above copyright notice and this permission notice shall be included in all c
   <div class="wrapper ">
     <div class="main-panel">
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+      <!--nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
           <div class="navbar-wrapper">
             <a class="navbar-brand" href="javascript:;">Dashboard</a>
           </div>
         </div>
-      </nav>
+      </nav-->
       <!-- End Navbar -->
       <div class="content">
         <div class="container-fluid">
@@ -476,7 +476,7 @@ The above copyright notice and this permission notice shall be included in all c
           </div>
         </div>
       </div>
-      <footer class="footer">
+      <!--footer-- class="footer">
         <div class="container-fluid">
           <nav class="float-left">
             <ul>
@@ -510,7 +510,7 @@ The above copyright notice and this permission notice shall be included in all c
             <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
           </div>
         </div>
-      </footer>
+      </footer-->
     </div>
   </div>
   <!--   Core JS Files   -->
@@ -557,8 +557,8 @@ The above copyright notice and this permission notice shall be included in all c
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
   <script src="../assets/demo/demo.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.24/datatables.min.css"/>
-  <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.24/datatables.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../assets/DataTables/datatables.min.css"/>
+  <script type="text/javascript" src="../assets/DataTables/datatables.min.js"></script>
   <script>
     $(document).ready(function() {
       $().ready(function() {
