--- a/Views/Layouts/Contents/Templates/dashboard.html
+++ b/Views/Layouts/Contents/Templates/dashboard.html
@@ -558,7 +558,7 @@ The above copyright notice and this permission notice shall be included in all c
   <script src="../assets/demo/demo.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <link rel="stylesheet" type="text/css" href="../assets/DataTables/datatables.min.css"/>
-  <script type="text/javascript" src="../assets/DataTables/datatables.min.js"></script>
+  <script type="text/javascript" src="../assets/DataTables/datatables.min.js"></script>s
   <script>
     $(document).ready(function() {
       $().ready(function() {
@@ -1033,5 +1033,4 @@ The above copyright notice and this permission notice shall be included in all c
     }
  </script>
 </body>
-
 </html>
